--- a/Passenger.Tests.EndToEnd/Passenger.Tests.EndToEnd.csproj
+++ b/Passenger.Tests.EndToEnd/Passenger.Tests.EndToEnd.csproj
@@ -11,5 +11,19 @@
     <ProjectReference Include="../Passenger.Infrastructure/Passenger.Infrastructure.csproj" />
   </ItemGroup>
 
+ <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.6.0" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="1.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="nspec" Version="3.1.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
+  </ItemGroup>
+
+
 </Project>
 
