--- a/Passenger.Infrastructure/Passenger.Infrastructure.csproj
+++ b/Passenger.Infrastructure/Passenger.Infrastructure.csproj
@@ -12,8 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include = "AutoMapper" Version = "6.0.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.1"/>
+    <PackageReference Include="Autofac" Version="4.9.2" />
+    <PackageReference Include="AutoMapper" Version="6.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
   </ItemGroup>
 
 </Project>
