--- a/Passenger.Tests.EndToEnd/Passenger.Tests.EndToEnd.csproj
+++ b/Passenger.Tests.EndToEnd/Passenger.Tests.EndToEnd.csproj
@@ -12,8 +12,9 @@
   </ItemGroup>
 
  <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.2" />
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="1.1.1" />
