--- a/Passenger.Infrastructure/Passenger.Infrastructure.csproj
+++ b/Passenger.Infrastructure/Passenger.Infrastructure.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Passenger.Infrastructure</AssemblyName>
     <PackageId>Passenger.Infrastructure</PackageId>
-    <NetStandardImplicitPackageVersion>1.6.1</NetStandardImplicitPackageVersion>
+    <NetStandardImplicitPackageVersion>2.0</NetStandardImplicitPackageVersion>
+    <RuntimeFrameworkVersion>2.0</RuntimeFrameworkVersion>
   </PropertyGroup>
 
   <ItemGroup>
