--- a/Passenger.Tests.EndToEnd/Passenger.Tests.EndToEnd.csproj
+++ b/Passenger.Tests.EndToEnd/Passenger.Tests.EndToEnd.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="4.19.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
