--- a/Passenger.Api/appsettings.json
+++ b/Passenger.Api/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "jwt": {
+    "key": "secretkey123456789",
+    "issuer": "http://localhost:5000",
+    "expiryMinutes": 5
+  }
 }
