--- a/Passenger.Api/appsettings.json
+++ b/Passenger.Api/appsettings.json
@@ -14,5 +14,10 @@
     "key": "secretkey123456789",
     "issuer": "http://localhost:5000",
     "expiryMinutes": 5
+  },
+
+  "mongo": {
+    "connectionString" :"mongodb://localhost:27017",
+    "database": "Passenger"
   }
 }
