--- a/Passenger.Api/appsettings.json
+++ b/Passenger.Api/appsettings.json
@@ -19,5 +19,10 @@
   "mongo": {
     "connectionString" :"mongodb://localhost:27017",
     "database": "Passenger"
+  },
+
+  "sql": {
+    "connectionString": "Server=localhost;User Id=SA;Password=zaq12wsx;Database=Passenger",
+    "inMemory": false
   }
 }
